sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: value or is not a member of Boolean
  while(gap>1 or tri)
              ^AlgCombSort:13: error: value ToDouble is not a member of Int
      gap = (gap.ToDouble / 1.3).ToInt;
                 ^