sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var length : Int = getValueCount();
  var gap : Int = length;
  var I : Int = 0;
  var tri : Boolean = true;
  
  while(gap>1 or tri)
  {
    tri=false;
    if(gap>1)
    {
      gap = (gap.ToDouble / 1.3).ToInt;
    }
    I=0;
    while(I+gap<length)
    {
      if(isSmaller(I,I+gap))
      {
        tri=true;
        swap(I,I+gap);
        I+=1;
      }
    }
  }
}